# new-image-resizer

./: .gitignore  CMakeLists.txt  README.md  conanbuildinfo.cmake  conanbuildinfo.gcc  conanbuildinfo.txt  conanbuildinfo.xcconfig  conanfile.py  conanfile.txt  conaninfo.txt  graph_info.json
conan-profiles/: mac_to_win
image-resizer.xcodeproj/: project.pbxproj
image-resizer.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
image-resizer.xcodeproj/project.xcworkspace/xcuserdata/marcojanker.xcuserdatad/: UserInterfaceState.xcuserstate
image-resizer.xcodeproj/xcshareddata/xcschemes/: image-resizer-mac.xcscheme  image-resizer.xcscheme  image-resizer_x86.xcscheme
image-resizer.xcodeproj/xcuserdata/marcojanker.xcuserdatad/xcschemes/: image-resizer x86.xcscheme  xcschememanagement.plist
image-resizer/image-resizer.xcodeproj/: project.pbxproj
image-resizer_arm64.xcodeproj/: project.pbxproj
image-resizer_arm64.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
image-resizer_arm64.xcodeproj/xcshareddata/xcschemes/: image-resizer.xcscheme
resize-image.xcodeproj/: project.pbxproj
resize-image.xcodeproj/xcshareddata/xcschemes/: resize-image.xcscheme
src/: ProgressBar.hpp  main.cpp  resizer.hpp
